# socketry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json  socketry
.github/workflows/: ci.yml  release.yml
docs/: protocol.md
src/socketry/: __init__.py  __main__.py  _constants.py  _crypto.py  cli.py  client.py  properties.py
tests/: test_cli.py  test_client.py  test_properties.py
